--- a/presentation/sections/thue-morse.tex
+++ b/presentation/sections/thue-morse.tex
@@ -14,7 +14,7 @@
 				\end{align*}\pause
 				It has a fixed point $v \in \{0, 1\}^\mathbb{Z}$ and gives a minimal subshift
 				\begin{align*}
-					X := \overline{\{\sigma^nv;\ n \in \mathbb{Z}\}}.
+					X := \overline{\{\sigma^nv|\ n \in \mathbb{Z}\}}.
 				\end{align*}
 			\end{example}\pause
 		\end{column}
@@ -29,7 +29,7 @@
 				\end{align*}\pause
 				It has a fixed point $w \in \{0, 1\}^\mathbb{Z}$ and gives a minimal subshift
 				\begin{align*}
-					Y := \overline{\{\sigma^nw;\ n \in \mathbb{Z}\}}.
+					Y := \overline{\{\sigma^nw|\ n \in \mathbb{Z}\}}.
 				\end{align*}
 			\end{example}\pause
 		\end{column}
@@ -51,7 +51,7 @@
 	The dyadic integers are given by
 	\begin{align*}
 		\mathbb{Z}_2 &:= \varprojlim_{k \to \infty} \mathbb{Z}/2^k\mathbb{Z}\\
-		&\cong \{(a_k)_{k \in \mathbb{N}} \in \prod_{k \in \mathbb{N}} \{0, \dots, 2^k-1\};\ a_{k+1} \in \{a_k, a_k + 2^k\}\}.
+		&\cong \{(a_k)_{k \in \mathbb{N}} \in \prod_{k \in \mathbb{N}} \{0, \dots, 2^k-1\}|\ a_{k+1} \in \{a_k, a_k + 2^k\}\}.
 	\end{align*}\pause
 	Equipped with pointwise addition they form a compact abelian group.\pause
 	
@@ -73,10 +73,10 @@
 			\rho: &\downarrow &\\
 			\text{dyadic odometer:} &\quad (\mathbb{Z}_2, d) \quad &\text{(2-)equicontinuous.}
 		\end{array}
-	\end{align*}\pause
+	\end{align*}
 	\medskip
 
-	In particular $(\mathbb{Z}_2, d)$ is the MEF of $(X, \sigma)$ and $(Y, \sigma)$. Also $(Y, \sigma)$ is a $3$-MEF of $(X, \sigma)$.\pause
+	In particular $(\mathbb{Z}_2, d)$ is the MEF of $(X, \sigma)$ and $(Y, \sigma)$. Also $(Y, \sigma)$ is a $3$-MEF of $(X, \sigma)$.
 	
 	Note that however the MEF of $(\{0, 1\}^\mathbb{Z}, \sigma)$ is trivial.
 \end{frame}
