fixes to rpr and meq

--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -27,10 +27,10 @@
     We denote the set of regionally proximal pairs by $Q_2(X) \subseteq X \times X$.
   \end{definition}
   Equivalently: There is $(x_n)$, $(y_n)$ in $X$ and $(t_n)$ in $T$, s.t.
-  \begin{equation}
+  \begin{equation*}
       \label{eq:rprchar}
       x_n \to x, \ y_n \to y \ \text{and} \ d(t_n x_n, t_n y_n) \to 0.
-  \end{equation} 
+  \end{equation*} 
   and
   \begin{equation*}
     Q_2(X) = \bigcap_{U \in \mathcal{U}(\Delta(X))} \overline{TU} 
