--- a/presentation/sections/meq.tex
+++ b/presentation/sections/meq.tex
@@ -1,7 +1,7 @@
 \section{m-Equicontinuity}
 
 \begin{frame}
-    \begin{definition}[$m$-Equicontinuity]
+    \begin{definition}[$m$-Equicontinuity [\cite{Garcia-Ramos2024}]]
 	    Fix $m \in \mathbb{N}$. Then $(X, T)$ is \emph{$m$-equicontinuous} if for all $\varepsilon > 0$ there exists a $\delta > 0$, such that for all $U \subseteq X$ open with $\operatorname{diam}(U) < \delta$, $x_1, \dots, x_m \in U$ and $t \in T$ there are $i, j \in \{1, \dots, m\}$ with $i \neq j$ such that $d(tx_i, tx_j) < \varepsilon$.
     \end{definition}
     \pause
@@ -57,7 +57,7 @@
     \end{theorem}
     \pause
     \begin{corollary}
-        Let $(X, T)$ be a minimal TDS and $\pi : X \to Y$ its MEF.
-        Then $m$-equicontinuous if and only if $\# \pi^{-1}(\{ y \}) < m$ for all $y \in Y$.
+        Let $(X, T)$ be a minimal TDS and $\pi : X \to X_\text{MEF}$ its MEF.
+        Then $m$-equicontinuous if and only if $\# \pi^{-1}(\{ y \}) < m$ for all $y \in X_\text{MEF}$.
     \end{corollary} 
 \end{frame}
