--- a/presentation/tikz/rpr-def.tex
+++ b/presentation/tikz/rpr-def.tex
@@ -1,3 +1,47 @@
+% \begin{tikzpicture}[scale = 1.4]
+%   % Coordinates of the main points
+%   \coordinate (A) at (2,3);
+%   \coordinate (B) at (2.5,1.5);
+
+%   % Off-center lighter points initial positions
+%   \coordinate (Alight) at ($(A) + (5pt,2pt)$);
+%   \coordinate (Blight) at ($(B) + (-5pt,-2pt)$);
+
+%   % Midpoint of lighter points
+%   \coordinate (Mid) at ($0.5*(Alight) + 0.5*(Blight)$);
+
+%   % Meeting point shifted 2 cm to the right of Mid
+%   \coordinate (M) at ($(Mid) + (2cm,0)$);
+
+%   % Draw dotted circles around main points
+%   \draw[dotted, thick] (A) circle (10pt);
+%   \draw[dotted, thick] (B) circle (10pt);
+
+%   \node[red, above left] at (A) {$x$};
+%   \node[blue, below right] at (B) {$y$};
+
+%   % Draw main points (smaller)
+%   \fill[red] (A) circle (2pt);
+%   \fill[blue] (B) circle (2pt);
+
+%   % Draw lighter points at initial positions
+%   \fill[red!50] (Alight) circle (1.5pt);
+%   \fill[blue!50] (Blight) circle (1.5pt);
+
+%   \node[red!50, above right] at (Alight) {$x'$};
+%   \node[blue!50, below left] at (Blight) {$y'$};
+
+%   % Draw trajectories of lighter points toward the meeting point
+%   \draw[red!50, thick, ->] (Alight) to[out=0,in=145] ($(M) + (0, 0.2)$);
+%   \draw[blue!50, thick, ->] (Blight) to[out=0,in=-145] (M);
+
+%   % Draw meeting point
+%   \draw[dotted, thick] (M) circle (10pt);
+
+%   \node[red!50, above right] at (M) {$tx'$};
+%   \node[blue!50, below right] at (M) {$ty'$};
+
+% \end{tikzpicture}
 \begin{tikzpicture}[scale = 1.4]
   % Coordinates of the main points
   \coordinate (A) at (2,3);
@@ -13,12 +57,33 @@
   % Meeting point shifted 2 cm to the right of Mid
   \coordinate (M) at ($(Mid) + (2cm,0)$);
 
+  % Additional destination points for trajectories from A and B
+  \coordinate (A2) at ($(A) + (2cm,0.2cm)$);
+  \coordinate (B2) at ($(B) + (2cm,-0.1cm)$);
+
   % Draw dotted circles around main points
   \draw[dotted, thick] (A) circle (10pt);
   \draw[dotted, thick] (B) circle (10pt);
 
+  % Draw dotted circles around meeting and additional points
+  \draw[dotted, thick] (M) circle (10pt);
+  \draw[dotted, thick] (A2) circle (8pt);
+  \draw[dotted, thick] (B2) circle (8pt);
+
+  % Labels for main points
   \node[red, above left] at (A) {$x$};
   \node[blue, below right] at (B) {$y$};
+
+  % Labels for lighter points
+  \node[red!50, above right] at (Alight) {$x'$};
+  \node[blue!50, below left] at (Blight) {$y'$};
+
+  % Labels for meeting point and additional destination points
+  \node[red!50, above right] at (M) {$tx'$};
+  \node[blue!50, below right] at (M) {$ty'$};
+
+  \node[red, above right] at (A2) {$x_2$};
+  \node[blue, below right] at (B2) {$y_2$};
 
   % Draw main points (smaller)
   \fill[red] (A) circle (2pt);
@@ -28,17 +93,22 @@
   \fill[red!50] (Alight) circle (1.5pt);
   \fill[blue!50] (Blight) circle (1.5pt);
 
-  \node[red!50, above right] at (Alight) {$x'$};
-  \node[blue!50, below left] at (Blight) {$y'$};
+  % Draw additional destination points (smaller)
+  \fill[red] (A2) circle (2pt);
+  \fill[blue] (B2) circle (2pt);
 
   % Draw trajectories of lighter points toward the meeting point
   \draw[red!50, thick, ->] (Alight) to[out=0,in=145] ($(M) + (0, 0.2)$);
+  \fill[red!50] ($(M) + (0, 0.2)$) circle (1.8pt);
+
   \draw[blue!50, thick, ->] (Blight) to[out=0,in=-145] (M);
+  \fill[blue!50] (M) circle (1.8pt);
 
-  % Draw meeting point
-  \draw[dotted, thick] (M) circle (10pt);
-
-  \node[red!50, above right] at (M) {$tx'$};
-  \node[blue!50, below right] at (M) {$ty'$};
+  % Draw new trajectories from main points to new destinations
+  \draw[red, thick, ->] (A) to[out=-30,in=225] (A2);
+  \fill[red] (A2) circle (2pt);
+  
+  \draw[blue, thick, ->] (B) to[out=20,in=150] (B2);
+  \fill[blue] (B2) circle (2pt);
 
 \end{tikzpicture}
