notation in meq

--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -132,7 +132,7 @@ The equicontinuous factor is the identity map with $\Delta(X)$ as ICER.
 \begin{frame}
   But first:
   \begin{definition}[topologically weakly mixing]
-    Let $(X,T)$ be a TDS. Then $(X,T)$ is called \emph{weakly mixing} if and only if every non-empty, $T$-invariant and open $U\subset X \times X$ is dense in $X \times X$.
+    Let $(X,T)$ be a TDS. Then $(X,T)$ is called \emph{weakly mixing} if every non-empty, $T$-invariant and open $U\subset X \times X$ is dense in $X \times X$.
   \end{definition}
   \pause
   \begin{proposition}[weakly mixing systems have trivial $Q_2$]
