added final changes

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -24,8 +24,10 @@
 \usepackage{verbatim}
 \usepackage[
 backend=biber,
-style=authoryear,
-%sorting=ynt
+style=alphabetic,
+maxbibnames =100,
+maxcitenames =100,
+maxalphanames =100
 ]{biblatex}
 \addbibresource{../references.bib}
 \setbeamertemplate{bibliography item}{}
