add abelian to slide

--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -179,4 +179,6 @@ The equicontinuous factor is the identity map with $\Delta(X)$ as ICER.
 \end{theorem}
   Note that minimality is important for $Q_2(X)$ being an equivalence relation (see Example).
   For a proof see \cite[p.130, Thm. 8.]{Auslaner}.
+
+  The condition of having an invariant Borel probability measure is always satisfied for abelian groups.
 \end{frame}
