fix set notation

--- a/presentation/sections/equicontinuity.tex
+++ b/presentation/sections/equicontinuity.tex
@@ -21,7 +21,7 @@
 		\end{remark}}
 		\only<4>{
 		\begin{definition}[Minimal TDS]
-			A TDS $(X, T)$ is minimal if for every $x \in X$ the orbit $\{tx;\ t \in T\}$ is dense in $X$.
+			A TDS $(X, T)$ is minimal if for every $x \in X$ the orbit $\{tx \mid t \in T\}$ is dense in $X$.
 		\end{definition}}
 	\end{minipage}
 	\end{overlayarea}
@@ -55,7 +55,7 @@
 	
 		Let $\pi: X \to Y$ be a factor map. Then we can define an ICER by
 		\begin{align*}
-			R_\pi := \{(x, y) \in X \times X|\ \pi(x) = \pi(y)\}.
+			R_\pi := \{(x, y) \in X \times X \mid \ \pi(x) = \pi(y)\}.
 		\end{align*}\pause
 	
 		In this case we have $(Y, T) \cong (X/R_\pi, T)$.\pause
