fix typo "equivalent rel" -> "equivalence rel"

--- a/presentation/sections/equicontinuity.tex
+++ b/presentation/sections/equicontinuity.tex
@@ -40,7 +40,7 @@
 		Two TDS are conjugated if there exists an conjugacy between them.\pause
 	\end{definition}
 	\begin{definition}[ICER and Quotient]
-		An \textbf{invariant closed equivalent relation} (ICER) $R \subseteq X \times X$ is a equivalence relation, such that $R$ is closed and $tR = R$ for all $t \in T$.\pause
+		An \textbf{invariant closed equivalence relation} (ICER) $R \subseteq X \times X$ is a equivalence relation, such that $R$ is closed and $tR = R$ for all $t \in T$.\pause
 		
 		Then the quotient $X/R$ becomes a TDS with $t[x] := [tx]$ for all $t \in T$ and $x \in X$.
 	\end{definition}
