fix "triviality" of MEF of equicont TDS

--- a/presentation/sections/mef.tex
+++ b/presentation/sections/mef.tex
@@ -14,7 +14,7 @@
   $(X,T)$ has a MEF that is unique up to equivalence.
   \end{alertblock}
   \pause
-\begin{example}[MEF of equicontinuous TDS is trivial]
+\begin{example}[MEF of equicontinuous TDS is original TDS]
   $(X,T)$ equicontinuous, then $I: (X,T) \to (X,T)$ is the MEF of $(X,T)$.
 \end{example}
 
