update citation for m-equicontinuous

--- a/references.bib
+++ b/references.bib
@@ -15,12 +15,19 @@ year = {1961},
 
 
 
-@misc{Garcia-Ramos2024,
-  title         = "Coincidence rank and multivariate equicontinuity",
-  author        = "Garc{\'\i}a-Ramos, Felipe and Le{\'o}n-Torres, Irma",
-  year          =  2024,
-  eprint={2411.03529},
-  archivePrefix={arXiv},
+@article{Garcia-Ramos2024,
+doi = {10.1088/1361-6544/ade190},
+url = {https://dx.doi.org/10.1088/1361-6544/ade190},
+year = {2025},
+month = {jun},
+publisher = {IOP Publishing},
+volume = {38},
+number = {7},
+pages = {075024},
+author = {García-Ramos, Felipe and León-Torres, Irma},
+title = {Coincidence rank and multivariate equicontinuity},
+journal = {Nonlinearity},
+abstract = {The coincidence rank, introduced by Barge and Kwapisz, measures the regularity of the maximal equicontinuous factor of minimal dynamical systems. We provide a characterization of the finiteness of coincidence rank using a multivariate notion of equicontinuity.}
 }
 
 @book{Auslaner,
@@ -37,4 +44,18 @@ year = {1961},
   publisher = "Springer",
   series    = "Graduate Texts in Mathematics",
   year      =  2015,
+}
+@article{Jincheng2005,
+  title = {Chaos in a topologically transitive system},
+  volume = {48},
+  ISSN = {1862-2763},
+  url = {http://dx.doi.org/10.1007/BF02879075},
+  DOI = {10.1007/bf02879075},
+  number = {7},
+  journal = {Science in China Series A: Mathematics},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Jincheng,  Xiong},
+  year = {2005},
+  month = jul,
+  pages = {929–939}
 }
