remove if and only if

--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -5,7 +5,7 @@
     \label{def:rpr}
     Let $(X, T)$ be a TDS.
     Two points $x,y \in X$ are called \emph{regionally proximal}
-    if and only if for each $\varepsilon > 0$ there exist $x' \in B_\varepsilon(x), y' \in B_\varepsilon(y)$
+    if for each $\varepsilon > 0$ there exist $x' \in B_\varepsilon(x), y' \in B_\varepsilon(y)$
     and $t \in T$ such that $d(tx', ty') < \varepsilon$.
     We denote the set of regionally proximal pairs by $Q_2(X) \subseteq X \times X$.
   \end{definition}
@@ -22,7 +22,7 @@
     \label{def:rpr}
     Let $(X, T)$ be a TDS.
     Two points $x,y \in X$ are called \emph{regionally proximal}
-    if and only if for each $\varepsilon > 0$ there exist $x' \in B_\varepsilon(x), y' \in B_\varepsilon(y)$
+    if for each $\varepsilon > 0$ there exist $x' \in B_\varepsilon(x), y' \in B_\varepsilon(y)$
     and $t \in T$ such that $d(tx', ty') < \varepsilon$.
     We denote the set of regionally proximal pairs by $Q_2(X) \subseteq X \times X$.
   \end{definition}
