fix illustration of rpr

--- a/presentation/tikz/rpr-def.tex
+++ b/presentation/tikz/rpr-def.tex
@@ -82,8 +82,8 @@
   \node[red!50, above right] at (M) {$tx'$};
   \node[blue!50, below right] at (M) {$ty'$};
 
-  \node[red, above right] at (A2) {$x_2$};
-  \node[blue, below right] at (B2) {$y_2$};
+  \node[red, above right] at (A2) {$tx$};
+  \node[blue, below right] at (B2) {$ty$};
 
   % Draw main points (smaller)
   \fill[red] (A) circle (2pt);
