improve rpr illustration

--- a/presentation/tikz/rpr-def.tex
+++ b/presentation/tikz/rpr-def.tex
@@ -67,8 +67,8 @@
 
   % Draw dotted circles around meeting and additional points
   \draw[dotted, thick] (M) circle (10pt);
-  \draw[dotted, thick] (A2) circle (8pt);
-  \draw[dotted, thick] (B2) circle (8pt);
+  %\draw[dotted, thick] (A2) circle (8pt);
+  %\draw[dotted, thick] (B2) circle (8pt);
 
   % Labels for main points
   \node[red, above left] at (A) {$x$};
