--- a/presentation/sections/equicontinuity.tex
+++ b/presentation/sections/equicontinuity.tex
@@ -35,7 +35,7 @@
 		\end{align*}
 		such that $\pi(tx) = t\pi(x)$ for all $t \in T,\ x \in X$.\pause
 		
-		A factor map is an \textbf{conjugacy} (of TDS) if it is a homeomorphism.
+		A factor map is a \textbf{conjugacy} (of TDS) if it is a homeomorphism.
 		
 		Two TDS are conjugated if there exists an conjugacy between them.\pause
 	\end{definition}
@@ -87,12 +87,14 @@
 		\only<3-4>{
 		\begin{proposition}
 			Let $d, \tilde{d}$ be two metrics on $X$, that induce the same topology. Then $(X, T)$ is equicontinuous with respect to $d$ if and only if it is equicontinuous with respect to $\tilde{d}$.
-			
-			We can always choose the metric such that is invariant under the action of $T$.
 		\end{proposition}}
 		\only<4>{
 		\begin{proposition}
-			Equicontinuity is preserved under conjugacies and (countable) products. 
+			For an equicontinuous action we can always choose a metric, inducing the same topology, that is invariant under the action.
+		\end{proposition}}
+		\only<5>{
+		\begin{proposition}
+			Equicontinuity is preserved under conjugacies, (countable) products and subsystems. 
 		\end{proposition}}
 	\end{minipage}
 	\end{overlayarea}
