--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -174,8 +174,8 @@ The identity map with $\Delta(X)$ as ICER is an equicontinuous factor.
   We have $Q_2(X) = R_{\text{MEF}}$ with some assumptions.
 \begin{theorem}
   Let $(X, T)$ be a minimal TDS with an invariant Borel probability measure
-  and $R$ be the ICER associated with the MEF of $X$.
-  Then $Q_2(X) = R$.
+  and $R_\text{MEF}$ be the ICER associated with the MEF of $X$.
+  Then $Q_2(X) = R_\text{MEF}$.
 \end{theorem}
   Note that minimality is important for $Q_2(X)$ being an equivalence relation (see Example).
   For a proof see \cite[p.130, Thm. 8.]{Auslaner}.
