--- a/presentation/sections/meq.tex
+++ b/presentation/sections/meq.tex
@@ -57,8 +57,8 @@
 	    Then $(X, T)$ is $m$-equicontinuous if and only if $Q_m(X) \setminus \Delta^m(X) = \varnothing$ for $2 \leq m \in \mathbb{N}$.
     \end{theorem}
     \pause
-    \begin{corollary}
+    \begin{theorem}[\cite{Garcia-Ramos2024}]
         Let $(X, T)$ be a minimal TDS and $\pi : X \to X_\text{MEF}$ its MEF.
         Then $m$-equicontinuous if and only if $\# \pi^{-1}(\{ y \}) < m$ for all $y \in X_\text{MEF}$.
-    \end{corollary} 
+    \end{theorem} 
 \end{frame}
